# Pine

./: CMakeLists.txt  CMakeSettings.json  README.md
app/: config.lua  game.lua  main.lua
app/on_update/: camera_controller.lua  grass.lua  player.lua  projectile.lua
app/scenes/: SceneFormat.txt  loading_scene.xml  main_scene.xml  scene.xml  testibro.xml
app/scripts/: another_script.lua  apple_on_update.lua  attack_system.lua  config.lua  loading_on_update.lua  main.lua  other_on_update.lua  printer_script.lua  s1.lua  spawn_script.lua  spawner_on_update.lua
buildmac/: CMakeCache.txt  Makefile  cmake_install.cmake  main
buildwin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Pine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  main.vcxproj  main.vcxproj.filters
buildwin/Debug/: glad.lib
buildwin/Release/: glad.lib
buildwin/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
buildwin/glad.dir/Release/glad.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
buildwin/main.dir/Debug/: main.exe.recipe  main.vcxproj.FileListAbsolute.txt
buildwin/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.write.1u.tlog
buildwin/main.dir/Release/: main.exe.recipe  main.vcxproj.FileListAbsolute.txt
buildwin/main.dir/Release/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.write.1u.tlog
buildwin/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildwin/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
buildwin/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
buildwin/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
buildwin/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
buildwin/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
buildwin/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
buildwin/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
core/Cone/: cone.lua  event.lua  keys.lua  math.lua  pine_api.lua
core/engine_lua/: internal_table_serialize.lua
core/include/: Application.h  FrameData.h  FromString.h  Input.h  LuaUtils.h  SceneParser.h  ScriptEngine.h  Serialize.h  TickRateScaling.h  Window.h  config.h  core.h  pch.h  profiling.h  singleton.h
core/include/events/: CustomEvent.h  Event.h  KeyEvent.h  LuaEvents.h  MouseEvent.h  WindowEvent.h
core/include/rendering/: Camera.h  IndexBuffer.h  QuadMesh.h  Renderer.h  Shader.h  Texture.h  TexturePool.h  TextureStorage.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
core/include/scene/: Components.h  Entity.h  LuaScene.h  Scene.h  SceneManager.h  SceneParser.h  SceneSerializer.h  SpatialGrid.h  System.h  ecs.h
core/include/systems/: Collision.h
core/src/: Application.cpp  Input.cpp  LuaUtils.cpp  SceneParser.cpp  ScriptEngine.cpp  TickRateScaling.cpp  Window.cpp  main.cpp
core/src/events/: LuaEvents.cpp
core/src/rendering/: Camera.cpp  IndexBuffer.cpp  QuadMesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TexturePool.cpp  TextureStorage.cpp  VertexArray.cpp  VertexBuffer.cpp
core/src/scene/: Components.cpp  LuaScene.cpp  Scene.cpp  SceneManager.cpp  SceneParser.cpp  SceneSerializer.cpp  SpatialGrid.cpp  System.cpp
core/src/systems/: Collision.cpp
dep/glad/: glad.c  glad.h
dep/sol/: stack_check_unqualified.hpp
dep/tinyxml2/: tinyxml2.h
res/shaders/: blank_sprite.frag  blank_sprite.vert  post_process.frag  post_process.vert  sprite.frag  sprite.vert  sprite_instanced.frag  sprite_instanced.vert
